--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,7 +105,30 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "ranges": "cpp",
-    "span": "cpp"
+    "span": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "__threading_support": "cpp",
+    "__verbose_abort": "cpp",
+    "bitset": "cpp",
+    "charconv": "cpp",
+    "complex": "cpp",
+    "cstring": "cpp",
+    "execution": "cpp",
+    "iomanip": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "print": "cpp",
+    "queue": "cpp",
+    "ratio": "cpp",
+    "sstream": "cpp",
+    "stack": "cpp",
+    "variant": "cpp"
   },
-  "editor.fontWeight": "normal"
+  "editor.fontWeight": "normal",
+  "C_Cpp.errorSquiggles": "disabled"
 }
