--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -127,7 +127,12 @@
     "ratio": "cpp",
     "sstream": "cpp",
     "stack": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "__tree": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "set": "cpp",
+    "unordered_set": "cpp"
   },
   "editor.fontWeight": "normal",
   "C_Cpp.errorSquiggles": "disabled"
