--- a/CPP09/ex02/Makefile
+++ b/CPP09/ex02/Makefile
@@ -1,6 +1,6 @@
 # Compiler and flags
 CC = c++
-CFLAGS = -g3 -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 # Target executable name
 NAME = PmergeMe
